# arize-workshops

./: .gitignore  README.md
cross-app-tracing/: .env.example  README.md  app.py  index.html  requirements.txt
cross-app-tracing/backend/: app.py  tracing.py
cross-app-tracing/frontend/: index.html
entity-transformer/: eval_maturity_workshop.ipynb  seattle_startup_workshop.ipynb
media-agent/: .env.example  .gitignore  README.md  agents.py  demo.py  instrumentation.py  prompt_utils.py  requirements.txt  seed_db.py  tools.py
media-agent/experiments/: EVALUATORS.md  README.md  arize_dataset_setup.py  (+4 more)
prompt-chaining-experiment/: .env.example  README.md  package-lock.json  package.json
synthetic-data/: .env.example  README.md  requirements-v7.txt  requirements.txt
synthetic-data/arize-ml-demo-data/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
synthetic-data/arize-ml-demo-data/arize_demo_data/: __init__.py  __main__.py  arize_logger.py  cli.py  config.py  embeddings.py  pipeline.py  shap_synth.py
synthetic-data/arize-ml-demo-data/arize_demo_data/core/: bands.py  distributions.py  ids.py  timestamps.py
synthetic-data/arize-ml-demo-data/arize_demo_data/flavors/: __init__.py  base.py  payments_fraud.py  registry.py
synthetic-data/arize-ml-demo-data/arize_demo_data/labels/: __init__.py  binary.py
synthetic-data/arize-ml-demo-data/arize_demo_data/spikes/: __init__.py  feature_drift.py  missing_values.py  registry.py  schema_regression.py
synthetic-data/arize-ml-demo-data/configs/: payments_fraud_binary.yaml
synthetic-data/arize-ml-demo-data/examples/: smoke.py
(+17 files in other folders)
